# TextClassify

./: LICENSE  README.md  TextClassify.cabal  br  cleanText.sed  run.sh  skipLines.awk  test.txt
app/: Main.hs
examples/: cleanText.sed  demoCsv.sh  demoCsvWithHeader.sh  demoDetail.sh  demoDetailInteractive.sh  demoLines.sh  egCsv.csv  egCsvWithHeader.csv  egLines.txt  skipLines.awk
examples/trainingData/: cs.txt  haskell.txt
src/: Args.hs  Classify.hs  ClassifyCsv.hs  ClassifyIO.hs  ClassifyLines.hs  Lib.hs  TfIdf.hs  TfIdf2.hs
test/: Spec.hs
trainingData/: a.txt  b.txt  haskell.txt
