name:                TextClassify
version:             0.0.1.0
synopsis:            TextClassify
description:         TextClassify
homepage:            https://github.com/andrevdm/TextClassify
license:             BSD3
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2016 Andre Van Der Merwe
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Classify
                     , ClassifyIO
                     , ClassifyLines
                     , ClassifyCsv
                     , TfIdf
                     , Args
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , containers
                     , directory
                     , cassava
                     , optparse-generic
                     , process
                     , bytestring
                     , vector
  default-language:    Haskell2010

executable txtcls
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TextClassify
                     , protolude
                     , text
                     , containers
                     , directory
  default-language:    Haskell2010

test-suite TextClassify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TextClassify
                     , protolude
                     , text
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevm/TextClassify
